@@ -49,7 +49,7 @@ export(erdos.renyi.game, random.graph.game, degree.sequence.game,
        growing.random.game, barabasi.game, ba.game,
        callaway.traits.game, establishment.game, grg.game,
        preference.game, asymmetric.preference.game, connect.neighborhood,
-       rewire.edges, watts.strogatz.game, lastcit.game)
+       rewire.edges, watts.strogatz.game, lastcit.game, cited.type.game)
 
 # community structure
 
